# migration-assistant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUBMISSION_DRAFT.md  pyproject.toml  vercel.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: index.html
src/mimo_migration_assistant/blueprint/: __init__.py  generator.py  templates.py
src/mimo_migration_assistant/cli/: __init__.py  main.py
src/mimo_migration_assistant/credential/: __init__.py  carrier.py
src/mimo_migration_assistant/executor/: engine.py
src/mimo_migration_assistant/models/: __init__.py  machine.py  migration.py  service.py
src/mimo_migration_assistant/notifier/: __init__.py  telegram.py  webhook.py
src/mimo_migration_assistant/scraper/: __init__.py  environment.py  services.py
src/mimo_migration_assistant/utils/: __init__.py  crypto.py  os_detect.py  shell.py  ssh.py
src/mimo_migration_assistant/validator/: __init__.py  lifecycle.py
tests/: conftest.py  test_blueprint.py  test_credential.py  test_executor.py  test_models.py  test_scraper.py  test_ssh.py  test_validator.py
tests/fixtures/: sample_telemetry.json
